finished grid and remove generated files

--- a/app/index.html
+++ b/app/index.html
@@ -18,9 +18,41 @@
 <body>
 
   <div class="container">
+     <div class="row">
+       <div class="col-xs-6 green">1a</div>
+       <div class="col-xs-6 green">2a</div>
+     </div>
     <div class="row">
-      <div class="col-xs-6 red">1</div>
-      <div class="col-xs-6 red">2</div>
+      <div class="col-xs-3 green">
+        <p>
+          Nam et despicationes, esse efflorescere proident varias aliquip, cillum probant 
+          est quibusdam ex se aliquip praesentibus, an est praetermissum, e id 
+          praetermissum quo ne enim aute aute cupidatat te aliquip quae eram incurreret 
+          legam. In tamen litteris cupidatat. Singulis cillum admodum, quo qui esse lorem 
+          malis. Varias adipisicing vidisse dolore officia. E quid laborum cupidatat, 
+          iudicem et esse te si enim nescius deserunt, quem cernantur qui instituendarum. 
+          E commodo ne expetendis id iis magna laborum distinguantur. Consequat ubi velit 
+          pariatur. In cupidatat tractavissent et eu aliqua illum sed tempor quo ad amet 
+          esse magna commodo ea appellat qui fore mentitum.
+        </p>
+
+        <p>
+          Mandaremus summis doctrina, eu do velit senserit, ad malis dolore se pariatur 
+          sed est non anim legam quae. Voluptate fugiat mentitum deserunt, sint eu iis 
+          labore commodo. Id irure exquisitaque. Est varias nescius, illum consequat de 
+          quamquam, sed vidisse efflorescere, o se irure aliqua sint. Legam probant ab 
+          fugiat nisi. Deserunt legam admodum deserunt.
+        </p>
+
+        <p>
+          Et sint adipisicing, aute officia te quid quae. Vidisse culpa laborum admodum. 
+          Possumus quis malis et sint. Ab varias instituendarum, ex aliqua laboris 
+          firmissimum ad e duis senserit exercitation, iudicem varias amet consequat 
+          magna. Veniam ingeniis an concursionibus. Nisi offendit hic minim malis. Iudicem 
+          ubi varias, cillum proident incididunt.
+        </p>
+      </div>
+      <div class="col-xs-1 red">2</div>
       <div class="col-xs-1 red">3</div>
       <div class="col-xs-1 red">4</div>
       <div class="col-xs-1 red">5</div>
@@ -29,8 +61,6 @@
       <div class="col-xs-1 red">8</div>
       <div class="col-xs-1 red">9</div>
       <div class="col-xs-1 red">10</div>
-      <div class="col-xs-1 red">11</div>
-      <div class="col-xs-1 red">12</div>
     </div>
   </div>
 
