--- a/app/from-template.html
+++ b/app/from-template.html
@@ -16,7 +16,7 @@
 
   <body>
 
-    <nav class="navbar navbar-inverse navbar-default navbar-fixed-top" role="navigation">
+    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
           <a href="#" class="navbar-brand">Animal Rescue of Texas</a>
@@ -67,8 +67,5 @@
 
     </div> <!-- /container -->
 
-
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
   </body>
 </html>
