inserting placeholder images

--- a/app/from-template.html
+++ b/app/from-template.html
@@ -39,7 +39,8 @@
 
       <div class="row marketing">
         <div class="col-lg-6">
-          <h4>Subheading</h4>
+          <h4>Adopt a Pet</h4>
+          <img src="http://lorempixel.com/350/180/cats/3" class="img-responsive" alt="Cat">
           <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
 
           <h4>Subheading</h4>
@@ -50,7 +51,8 @@
         </div>
 
         <div class="col-lg-6">
-          <h4>Subheading</h4>
+          <h4>Volunteer</h4>
+          <img src="http://lorempixel.com/350/180/cats/4" class="img-responsive" alt="Cat">
           <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
 
           <h4>Subheading</h4>
