--- a/app/index.html
+++ b/app/index.html
@@ -1,92 +1,73 @@
-<!doctype html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title></title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-  <link rel="stylesheet" href="styles/main.css">
-  <!-- build:js scripts/vendor/modernizr.js -->
-  <script src="bower_components/modernizr/modernizr.js"></script>
-  <!-- endbuild -->
-</head>
-<body>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Animal Rescue of Texas</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+    <link rel="stylesheet" href="styles/main.css">
+    <!-- build:js scripts/vendor/modernizr.js -->
+    <script src="bower_components/modernizr/modernizr.js"></script>
+    <!-- endbuild -->
+  </head>
 
-  <div class="container">
-     <div class="row">
-       <div class="col-xs-6 green">1a</div>
-       <div class="col-xs-6 green">2a</div>
-     </div>
-    <div class="row">
-      <div class="col-xs-3 green">
-        <p>
-          Nam et despicationes, esse efflorescere proident varias aliquip, cillum probant 
-          est quibusdam ex se aliquip praesentibus, an est praetermissum, e id 
-          praetermissum quo ne enim aute aute cupidatat te aliquip quae eram incurreret 
-          legam. In tamen litteris cupidatat. Singulis cillum admodum, quo qui esse lorem 
-          malis. Varias adipisicing vidisse dolore officia. E quid laborum cupidatat, 
-          iudicem et esse te si enim nescius deserunt, quem cernantur qui instituendarum. 
-          E commodo ne expetendis id iis magna laborum distinguantur. Consequat ubi velit 
-          pariatur. In cupidatat tractavissent et eu aliqua illum sed tempor quo ad amet 
-          esse magna commodo ea appellat qui fore mentitum.
-        </p>
 
-        <p>
-          Mandaremus summis doctrina, eu do velit senserit, ad malis dolore se pariatur 
-          sed est non anim legam quae. Voluptate fugiat mentitum deserunt, sint eu iis 
-          labore commodo. Id irure exquisitaque. Est varias nescius, illum consequat de 
-          quamquam, sed vidisse efflorescere, o se irure aliqua sint. Legam probant ab 
-          fugiat nisi. Deserunt legam admodum deserunt.
-        </p>
+  <body>
 
-        <p>
-          Et sint adipisicing, aute officia te quid quae. Vidisse culpa laborum admodum. 
-          Possumus quis malis et sint. Ab varias instituendarum, ex aliqua laboris 
-          firmissimum ad e duis senserit exercitation, iudicem varias amet consequat 
-          magna. Veniam ingeniis an concursionibus. Nisi offendit hic minim malis. Iudicem 
-          ubi varias, cillum proident incididunt.
-        </p>
+    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <a href="#" class="navbar-brand">Animal Rescue of Texas</a>
+        </div>
+        <ul class="nav navbar-nav">
+          <li class="active"><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
       </div>
-      <div class="col-xs-1 red">2</div>
-      <div class="col-xs-1 red">3</div>
-      <div class="col-xs-1 red">4</div>
-      <div class="col-xs-1 red">5</div>
-      <div class="col-xs-1 red">6</div>
-      <div class="col-xs-1 red">7</div>
-      <div class="col-xs-1 red">8</div>
-      <div class="col-xs-1 red">9</div>
-      <div class="col-xs-1 red">10</div>
-    </div>
-  </div>
+    </nav>
 
-  <!--[if lt IE 7]>
-    <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-  <![endif]-->
+    <div class="container">
 
-  <!-- build:js scripts/main.js -->
-  <script src="bower_components/jquery/jquery.js"></script>
-  <script src="scripts/main.js"></script>
-  <script src="scripts/hello.js"></script>
-  <!-- endbuild -->
+      <div class="jumbotron">
+        <h1>Jumbotron heading</h1>
+        <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+        <p><a class="btn btn-lg btn-success" href="#" role="button">Sign up today</a></p>
+      </div>
 
-  <!-- build:js scripts/vendor/bootstrap.js -->
-  <script src="bower_components/bootstrap/js/affix.js"></script>
-  <script src="bower_components/bootstrap/js/alert.js"></script>
-  <script src="bower_components/bootstrap/js/dropdown.js"></script>
-  <script src="bower_components/bootstrap/js/tooltip.js"></script>
-  <script src="bower_components/bootstrap/js/modal.js"></script>
-  <script src="bower_components/bootstrap/js/transition.js"></script>
-  <script src="bower_components/bootstrap/js/button.js"></script>
-  <script src="bower_components/bootstrap/js/popover.js"></script>
-  <script src="bower_components/bootstrap/js/carousel.js"></script>
-  <script src="bower_components/bootstrap/js/scrollspy.js"></script>
-  <script src="bower_components/bootstrap/js/collapse.js"></script>
-  <script src="bower_components/bootstrap/js/tab.js"></script>
-  <!-- endbuild -->
-</body>
+      <div class="row marketing">
+        <div class="col-lg-6">
+          <h4>Adopt a Pet</h4>
+          <img src="http://lorempixel.com/350/180/cats/3" class="img-responsive" alt="Cat">
+          <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
+
+          <h4>Subheading</h4>
+          <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
+
+          <h4>Subheading</h4>
+          <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+        </div>
+
+        <div class="col-lg-6">
+          <h4>Volunteer</h4>
+          <img src="http://lorempixel.com/350/180/cats/4" class="img-responsive" alt="Cat">
+          <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
+
+          <h4>Subheading</h4>
+          <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
+
+          <h4>Subheading</h4>
+          <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+        </div>
+      </div>
+
+      <div class="footer">
+        <p>&copy; Company 2014</p>
+      </div>
+
+    </div> <!-- /container -->
+
+  </body>
 </html>
