experimenting with layouts

--- a/app/index.html
+++ b/app/index.html
@@ -37,13 +37,43 @@
         <p><a class="btn btn-lg btn-success" href="#" role="button">Sign up today</a></p>
       </div>
 
-      <div class="row marketing">
+      <div class="row sub-marketing">
         <div class="col-lg-6">
           <h4>Adopt a Pet</h4>
           <img src="http://lorempixel.com/350/180/cats/3" class="img-responsive" alt="Cat">
           <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
+        </div>
+        <div class="col-lg-6">
+          <h4>Volunteer</h4>
+          <img src="http://lorempixel.com/350/180/cats/4" class="img-responsive" alt="Cat">
+          <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
+        </div>
+      </div><!--//row marketing-->
 
+      <div class="row sub-marketing">
+        <div class="col-lg-12">
           <h4>Subheading</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti aperiam, non earum quasi alias veniam commodi, itaque quia, recusandae nam beatae. A eveniet fugiat asperiores illo, expedita porro sunt labore adipisci minima eos sit vitae velit cum fugit natus iste deserunt doloribus reiciendis placeat dolor dolorem iusto quae, eaque enim?</p>
+        </div>
+      </div>
+
+      <div class="row sub-marketing">
+        <div class="col-lg-4">
+          <h4>Subheading</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis quidem qui, maxime sit, dolore, aliquam ipsum aliquid quisquam modi, exercitationem minima? Omnis architecto temporibus quaerat ipsa natus corporis accusamus sed?</p>
+        </div>
+        <div class="col-lg-4">
+          <h4>Subheading</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus a nemo, repudiandae similique? Vitae ipsa, possimus amet sint fugiat? Temporibus, qui laborum vero deleniti enim dolor ea odit inventore ipsam!</p>
+        </div>
+        <div class="col-lg-4">
+          <h4>Subheading</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur placeat deserunt praesentium architecto distinctio cumque itaque, veniam atque! Debitis quod magnam neque consequuntur, itaque consectetur deleniti quaerat, tempora alias totam.</p>
+        </div>
+      </div>
+
+
+          <!-- <h4>Subheading</h4>
           <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
 
           <h4>Subheading</h4>
@@ -51,9 +81,6 @@
         </div>
 
         <div class="col-lg-6">
-          <h4>Volunteer</h4>
-          <img src="http://lorempixel.com/350/180/cats/4" class="img-responsive" alt="Cat">
-          <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
 
           <h4>Subheading</h4>
           <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
@@ -61,7 +88,7 @@
           <h4>Subheading</h4>
           <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
         </div>
-      </div>
+      </div> -->
 
       <div class="footer">
         <p>&copy; Company 2014</p>
