more color and layout changes

--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,6 @@
     <!-- endbuild -->
   </head>
 
-
   <body>
 
     <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
@@ -30,27 +29,38 @@
     </nav>
 
     <div class="container">
-
       <div class="jumbotron">
-        <h1>Jumbotron heading</h1>
-        <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-        <p><a class="btn btn-lg btn-success" href="#" role="button">Sign up today</a></p>
+        <h1>Save a pet today!</h1>
+        <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+        <p><a class="btn btn-lg btn-success" href="#" role="button">Join Now</a></p>
       </div>
+    </div>
 
-      <div class="row sub-marketing">
-        <div class="col-lg-6">
-          <h4>Adopt a Pet</h4>
-          <img src="http://lorempixel.com/350/180/cats/3" class="img-responsive" alt="Cat">
-          <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
+    <div class="adoptions">
+      <div class="container">
+        <div class="row sub-marketing">
+          <div class="col-lg-4">
+            <h4>Mr. Chuckles</h4>
+            <img src="http://lorempixel.com/350/180/cats/3" class="img-responsive" alt="Cat">
+            <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
+          </div>
+          <div class="col-lg-4">
+            <h4>Apricat</h4>
+            <img src="http://lorempixel.com/350/180/cats/4" class="img-responsive" alt="Cat">
+            <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
+          </div>
+          <div class="col-lg-4">
+            <h4>Jellie</h4>
+            <img src="http://lorempixel.com/350/180/cats/5" class="img-responsive" alt="Cat">
+            <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
+          </div>
         </div>
-        <div class="col-lg-6">
-          <h4>Volunteer</h4>
-          <img src="http://lorempixel.com/350/180/cats/4" class="img-responsive" alt="Cat">
-          <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
-        </div>
-      </div><!--//row marketing-->
+      </div>
+    </div><!--//adoptions-->
 
-      <div class="row sub-marketing">
+    <div class="container">
+
+      <div class="row marketing">
         <div class="col-lg-12">
           <h4>Subheading</h4>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti aperiam, non earum quasi alias veniam commodi, itaque quia, recusandae nam beatae. A eveniet fugiat asperiores illo, expedita porro sunt labore adipisci minima eos sit vitae velit cum fugit natus iste deserunt doloribus reiciendis placeat dolor dolorem iusto quae, eaque enim?</p>
@@ -72,29 +82,11 @@
         </div>
       </div>
 
-
-          <!-- <h4>Subheading</h4>
-          <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
-
-          <h4>Subheading</h4>
-          <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
-        </div>
-
-        <div class="col-lg-6">
-
-          <h4>Subheading</h4>
-          <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
-
-          <h4>Subheading</h4>
-          <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
-        </div>
-      </div> -->
-
       <div class="footer">
         <p>&copy; Company 2014</p>
       </div>
 
-    </div> <!-- /container -->
+    </div><!-- /container -->
 
   </body>
 </html>
