--- a/app/index.html
+++ b/app/index.html
@@ -18,7 +18,7 @@
     <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
-          <a href="#" class="navbar-brand">Animal Rescue of Texas</a>
+          <a href="#" class="navbar-brand">Cat Rescue of Texas</a>
         </div>
         <ul class="nav navbar-nav">
           <li class="active"><a href="#">Home</a></li>
@@ -29,12 +29,43 @@
     </nav>
 
     <div class="container">
-      <div class="jumbotron">
-        <h1>Save a pet today!</h1>
-        <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-        <p><a class="btn btn-lg btn-success" href="#" role="button">Join Now</a></p>
+      <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+          <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+          <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+          <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+        </ol>
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner">
+          <div class="item active">
+            <img src="http://lorempixel.com/900/500/cats/6" alt="three black cats abandoned in a parking lot">
+            <div class="carousel-caption">
+              So many cats are abandoned...
+            </div>
+          </div>
+          <div class="item">
+            <img src="http://lorempixel.com/900/500/cats/7" alt="cat">
+            <div class="carousel-caption">
+              They just need some love,
+            </div>
+          </div>
+          <div class="item">
+            <img src="http://lorempixel.com/900/500/cats/8" alt="cat">
+            <div class="carousel-caption">
+              and a forever home.
+            </div>
+          </div>
+        </div>
+        <!-- Controls -->
+        <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+          <span class="glyphicon glyphicon-chevron-left"></span>
+        </a>
+        <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+          <span class="glyphicon glyphicon-chevron-right"></span>
+        </a>
       </div>
-    </div>
+    </div><!--//carousel -->
 
     <div class="adoptions">
       <div class="container">
@@ -87,6 +118,15 @@
       </div>
 
     </div><!-- /container -->
+
+    <!-- build:js scripts/main.js -->
+  <script src="bower_components/jquery/jquery.js"></script>
+  <!-- endbuild -->
+
+  <!-- build:js scripts/vendor/bootstrap.js -->
+  <script src="bower_components/bootstrap/js/transition.js"></script>
+  <script src="bower_components/bootstrap/js/carousel.js"></script>
+  <!-- endbuild -->
 
   </body>
 </html>
