--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-    <link rel="stylesheet" href="styles/9b8ddd3d.main.css">
+    <link rel="stylesheet" href="styles/4cc4c070.main.css">
     <script src="scripts/vendor/d7100892.modernizr.js"></script>
   </head>
 
@@ -16,7 +16,7 @@
     <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
-          <a href="#" class="navbar-brand">Animal Rescue of Texas</a>
+          <a href="#" class="navbar-brand">Cat Rescue of Texas</a>
         </div>
         <ul class="nav navbar-nav">
           <li class="active"><a href="#">Home</a></li>
@@ -27,12 +27,43 @@
     </nav>
 
     <div class="container">
-      <div class="jumbotron">
-        <h1>Save a pet today!</h1>
-        <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-        <p><a class="btn btn-lg btn-success" href="#" role="button">Join Now</a></p>
+      <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+          <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+          <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+          <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+        </ol>
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner">
+          <div class="item active">
+            <img src="http://lorempixel.com/900/500/cats/6" alt="three black cats abandoned in a parking lot">
+            <div class="carousel-caption">
+              So many cats are abandoned...
+            </div>
+          </div>
+          <div class="item">
+            <img src="http://lorempixel.com/900/500/cats/7" alt="cat">
+            <div class="carousel-caption">
+              They just need some love,
+            </div>
+          </div>
+          <div class="item">
+            <img src="http://lorempixel.com/900/500/cats/8" alt="cat">
+            <div class="carousel-caption">
+              and a forever home.
+            </div>
+          </div>
+        </div>
+        <!-- Controls -->
+        <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+          <span class="glyphicon glyphicon-chevron-left"></span>
+        </a>
+        <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+          <span class="glyphicon glyphicon-chevron-right"></span>
+        </a>
       </div>
-    </div>
+    </div><!--//carousel -->
 
     <div class="adoptions">
       <div class="container">
@@ -85,6 +116,10 @@
       </div>
 
     </div><!-- /container -->
+
+    <script src="scripts/488e3e7a.main.js"></script>
+
+  <script src="scripts/vendor/82fb7698.bootstrap.js"></script>
 
   </body>
 </html>
