--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Animal Rescue of Texas</title>
+    <title>Cat Rescue of Texas</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -114,7 +114,7 @@
       </div>
 
       <div class="footer">
-        <p>&copy; Company 2014</p>
+        <p>&copy; Cat Rescue of Texas 2014</p>
       </div>
 
     </div><!-- /container -->
