starting on contact form

--- a/app/index.html
+++ b/app/index.html
@@ -33,7 +33,7 @@
               <li><a href="#">Siamese</a></li>
             </ul>
           </li><!--//dropdown-->
-          <li><a href="#">Contact</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </div>
     </nav>
