--- a/index.html
+++ b/index.html
@@ -7,33 +7,41 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-    <link rel="stylesheet" href="styles/0a4bea8c.main.css">
+    <link rel="stylesheet" href="styles/260cd862.main.css">
     <script src="scripts/vendor/d7100892.modernizr.js"></script>
   </head>
 
   <body>
 
-    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <nav class="navbar navbar-default navbar-static-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
-          <a href="#" class="navbar-brand">Cat Rescue of Texas</a>
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a href="index.html" class="navbar-brand">Cat Rescue of Texas</a>
         </div>
-        <ul class="nav navbar-nav">
-          <li class="active"><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li class="dropdown">
-            <a id="dCats" role="button" data-toggle="dropdown" data-target="#" href="/pets.html">
-              Cats <span class="caret"></span>
-            </a>
-            <ul class="dropdown-menu" role="menu" aria-labelledby="dCats">
-              <li><a href="#">Shorthair</a></li>
-              <li><a href="#">Longhair</a></li>
-              <li><a href="#">Siamese</a></li>
-            </ul>
-          </li><!--//dropdown-->
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </div>
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li class="dropdown">
+              <a id="dCats" role="button" data-toggle="dropdown" data-target="#" href="/pets.html">
+                Cats <span class="caret"></span>
+              </a>
+              <ul class="dropdown-menu" role="menu" aria-labelledby="dCats">
+                <li><a href="#">Shorthair</a></li>
+                <li><a href="#">Longhair</a></li>
+                <li><a href="#">Siamese</a></li>
+              </ul>
+            </li><!--//dropdown-->
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+        </div><!--//navbar-collapse-->
+      </div><!--//container-->
     </nav>
 
     <div class="container">
@@ -129,7 +137,7 @@
 
     <script src="scripts/488e3e7a.main.js"></script>
 
-  <script src="scripts/vendor/fd097004.bootstrap.js"></script>
+  <script src="scripts/vendor/f7e159e3.bootstrap.js"></script>
 
   </body>
 </html>
